progress - added cabin photo grid

--- a/index.html
+++ b/index.html
@@ -39,13 +39,13 @@
         </div>
 
         <img
-          src="./images/sadeq-mousavi-2ZZ8hql1sKE-unsplash.jpg"
-          alt="cabin in forest"
+          src="./images/romanas-PYkX4ruvXXs-unsplash.jpg"
+          alt="cabins in forest"
           class="about-img"
         />
       </section>
 
-      <section class="cabin-section">
+      <!-- <section class="cabin-section">
         <h2>our cabins</h2>
         <div class="cabin-images">
           <img src="./images/romanas-PYkX4ruvXXs-unsplash.jpg" alt="cabin 1" />
@@ -56,6 +56,42 @@
           <img
             src="./images/michele-tardivo-G0OnHccvwcA-unsplash.jpg"
             alt="cabin 2"
+          />
+        </div>
+      </section> -->
+
+      <section class="cabin-section">
+        <h2>our cabins</h2>
+        <div class="cabin-images">
+          <img
+            src="./images/michele-tardivo-G0OnHccvwcA-unsplash.jpg"
+            alt="cabin 1"
+            class="cabin-1"
+          />
+          <img
+            src="./images/bjorn-grochla-jXJEnwB1C5Q-unsplash.jpg"
+            alt="cabin 2"
+            class="cabin-2"
+          />
+          <img
+            src="./images/kristin-ellis-qHlUwZLS5F4-unsplash.jpg"
+            alt="cabin 3"
+            class="cabin-3"
+          />
+          <img
+            src="./images/olivier-guillard-FKJgBUDoVC0-unsplash.jpg"
+            alt="cabin 4"
+            class="cabin-4"
+          />
+          <img
+            src="./images/sadeq-mousavi-2ZZ8hql1sKE-unsplash.jpg"
+            alt="cabin 5"
+            class="cabin-5"
+          />
+          <img
+            src="./images/adrian-dascal-gW5dQSFER9A-unsplash.jpg"
+            alt="cabin "
+            class="cabin-6"
           />
         </div>
       </section>
