cleanup of code

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Fireflies at dusk</title>
+    <title>Escape to the forest</title>
   </head>
   <body>
     <header class="header">
@@ -12,7 +12,11 @@
 
       <nav class="global-nav" id="global-nav">
         <ul class="global-nav-ul">
-          <img src="./images/close.svg" alt="close-menu" id="close-menu" />
+          <img
+            src="./images/close.svg"
+            alt="close side menu button"
+            id="close-menu"
+          />
 
           <li class="about-link">about</li>
           <li class="cabins-link">cabins</li>
