add back to top button

--- a/index.html
+++ b/index.html
@@ -120,6 +120,11 @@
       <p>&copy; The Forest Cabins</p>
     </footer>
 
+    <div class="back-to-top inactive">
+      <i class="fa fa-arrow-up" aria-hidden="true"></i>
+      <p>back to top</p>
+    </div>
+
     <canvas id="bg"></canvas>
 
     <script type="module" src="/scripts/3D.js"></script>
